# latte-distro

./: .docker-build.sh  .gitattributes  .gitignore  .travis-build.sh  .travis-print-logs.sh  .travis.yml  ChangeLog  Makefile.am  README  autogen.sh  cdd+-077.patch  cddlib-shared-library.patch  configure.ac  gmp-4.2.1-patch  lidia-2.2.0-2.patch  lidia-2.2.0.patch  ntl-5.4-patch
cddlib/: Makefile.am  autogen.sh  configure.ac
cddlib/lib-src/: Makefile.am  cddcore.c  cddlp.c
cddlib/lib-src-gmp/: Makefile.am
cddlib/src/: Makefile.am  Makefile.in
cddlib/src-gmp/: Makefile.am
m4/: ax_cc_maxopt.m4  ax_cxx_maxopt.m4
