ACLOCAL_AMFLAGS = -I m4
SUBDIRS      = lib-src lib-src-gmp src src-gmp
EXTRA_DIST   =					\
	doc/cddlibman.pdf			\
	doc/cddlibman.ps			\
	doc/cddlibman.tex			\
	doc/html.sty				\
	examples-ext/ccc4.ext			\
	examples-ext/ccc5.ext			\
	examples-ext/ccc6.ext			\
	examples-ext/ccp4.ext			\
	examples-ext/ccp5.ext			\
	examples-ext/ccp6.ext			\
	examples-ext/cyclic10-4.ext		\
	examples-ext/cyclic12-6.ext		\
	examples-ext/cyclic14-8.ext		\
	examples-ext/cyclic16-10.ext		\
	examples-ext/irbox200-4.ext		\
	examples-ext/irbox20-4.ext		\
	examples-ext/prodst62.ext		\
	examples-ext/reg24-5.ext		\
	examples-ext/reg600-5.ext		\
	examples-ine3d/cube3.ine		\
	examples-ine3d/cubocta.ine		\
	examples-ine3d/dodeca.ine		\
	examples-ine3d/grcubocta.ine		\
	examples-ine3d/hexocta.ine		\
	examples-ine3d/icododeca.ine		\
	examples-ine3d/rcubocta.ine		\
	examples-ine3d/rhomtria.ine		\
	examples-ine/allzero.ine		\
	examples-ine/cross10.ine		\
	examples-ine/cross12.ine		\
	examples-ine/cross6.ine			\
	examples-ine/cross8.ine			\
	examples-ine/cube10.ine			\
	examples-ine/cube12.ine			\
	examples-ine/cube6.ine			\
	examples-ine/cube8.ine			\
	examples-ine/cubocta.ine		\
	examples-ine/ex1.ine			\
	examples-ine/infeas.ine			\
	examples-ine/integralpoints.ine		\
	examples-ine/kkd18_4.ine		\
	examples-ine/kkd27_5.ine		\
	examples-ine/kkd38_6.ine		\
	examples-ine/nonfull.ine		\
	examples-ine/origin.ine			\
	examples-ine/reg24-5.ine		\
	examples-ine/sampleh1.ine		\
	examples-ine/sampleh2.ine		\
	examples-ine/sampleh3.ine		\
	examples-ine/sampleh4.ine		\
	examples-ine/sampleh5.ine		\
	examples-ine/sampleh6.ine		\
	examples-ine/sampleh7.ine		\
	examples-ine/sampleh8.ine		\
	examples-ine/samplelp1.ine		\
	examples-ine/samplelp2.ine		\
	examples-ine/samplelp3.ine		\
	examples-ine/samplelp4.ine		\
	examples-ine/samplelp.ine		\
	examples-ml/cddml-DietProblem.nb	\
	examples-ml/cddml-notebook.nb		\
	examples-ml/cddml-PolytopeSkeleton.nb	\
	examples-ml/cddml-Zonotope.m		\
	examples-ml/cddml-Zonotope.nb		\
	examples-ml/Combinatorica5.m		\
	examples-ml/ExtendGraphics30.tar	\
	examples-ml/IOPolyhedra.m		\
	examples-ml/PolytopeSkeleton.m		\
	examples-ml/README.cddmathlink		\
	examples-ml/UnfoldPolytope.m		\
	examples/project1.ine			\
	examples/project1res.ine		\
	examples/project2.ine			\
	examples/project2res.ine		\
	examples/redcheck.ext			\
	examples/sampleh1.ine			\
	examples/sampleh2.ine			\
	examples/sampleh3.ine			\
	examples/sampleh4.ine			\
	examples/sampleh5.ine			\
	examples/sampleh6.ine			\
	examples/sampleh7.ine			\
	examples/sampleh8.ine			\
	examples/sample.ine			\
	examples/samplelp1.ine			\
	examples/samplelp2.ine			\
	examples/samplelp3.ine			\
	examples/samplelp4.ine			\
	examples/samplelp_big_dualinfeas.ine	\
	examples/samplelp_big.ine		\
	examples/samplelp.ine			\
	examples/samplelp.testlp1_gmp_output	\
	examples/samplelp.testlp1_output	\
	examples/samplev1.ext			\
	examples/samplev2.ext			\
	examples/samplev3.ext

